--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?52e0eead6cebc8cf8792" rel="stylesheet"></head>
+<link href="main.css?c5e331037752b6370bdc" rel="stylesheet"></head>
 
 <body>
+    <div class="burger-full">
+        <div class="burger-menu text-xl lg:text-3xl">
+            <div class="burger-menu__item"><a href="#">Homepage</a></div>
+            <div class="burger-menu__item"><a href="#">About</a></div>
+            <div class="burger-menu__item"><a href="#">Clients and testimonials</a></div>
+            <div class="burger-menu__item"><a href="#">List of services </a></div>
+            <div class="burger-menu__item"><a href="#">Copywriting process</a></div>
+            <div class="burger-menu__item"><a href="#">FAQ</a></div>
+            <div class="burger-menu__item"><a href="#">Contacts</a></div>
+        </div>
+    </div>
     <div class="main-wrapper">
         <header>
             <div class="header-logo">
@@ -26,7 +37,7 @@
         </div>
         <div class="container flex justify-between flex-wrap" id="about">
             <div class="about-img w-full lg:w-1/2">
-                <img src='images/5d197aec7ae556f6fe31c12c3ea676a4.jpg' class="w-full object-cover">
+                <img src='images/63e69afe7a52ba2f70b96f82c3f3a06c.jpg' class="w-full object-cover">
             </div>
             <div class="about-text w-full lg:w-1/2">
                 <div class="about-text__h1 text-3xl lg:text-4xl">
@@ -39,20 +50,20 @@
             </div>
         </div>
         <footer>
-            <div class="footer-phone py-4">
+            <div class="footer-phone py-4 w-full md:w-1/4">
                 <a href="tel:+79999999999">+79999999999</a>
             </div>
-            <div class="footer-icons flex py-4">
+            <div class="footer-icons flex justify-center py-4 w-full md:w-2/4">
                 <div class="footer-icon"><i class="fab fa-facebook"></i></div>
                 <div class="footer-icon"><i class="fab fa-instagram"></i></div>
                 <div class="footer-icon"><i class="fab fa-twitter"></i></div>
                 <div class="footer-icon"><i class="fab fa-google"></i></div>
             </div>
-            <div class="footer-mail py-4">
+            <div class="footer-mail py-4 w-full md:w-1/4">
                 <a href="mailto:test@gmail.com">test@gmail.com</a>
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?52e0eead6cebc8cf8792"></script></body>
+<script type="text/javascript" src="main.js?c5e331037752b6370bdc"></script></body>
 
 </html>
