--- a/faq.html
+++ b/faq.html
@@ -29,23 +29,39 @@
                 <div class="header-burger__line"></div>
             </div>
         </header>
-        <div class="main-title">
-            <div class="main-title__logo">Tony Kent</div>
-            <div class="main-title__slogan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe nisi tempora ad corporis excepturi eaque enim quia porro harum?</div>
-            <div class="main-title__about"><a href="#about">about me</a></div>
-            <div class="main-title__down"><a href=""><i class="fas fa-sort-alpha-down"></i></a></div>
-        </div>
-        <div class="container flex justify-between flex-wrap" id="about">
-            <div class="about-img w-full lg:w-1/2">
-                <img src='images/63e69afe7a52ba2f70b96f82c3f3a06c.jpg' class="w-full object-cover">
+        <div class="container">
+            <div class="clients-title">
+                FAQ
             </div>
-            <div class="about-text w-full lg:w-1/2">
-                <div class="about-text__h1 text-3xl lg:text-4xl">
-                    Tony Kent
+            <div class="faq">
+                <div class="faq-item">
+                    <div class="faq-item__question">
+                        <div class="faq-question__title">What does a copywriter do?</div>
+                        <div class="faq-question__icon">+</div>
+                    </div>
+                    <div class="faq-item__answer">
+                        From engaging with your customers to enhancing your brand, a good copywriter will be able to understand your business and its objectives, distil your market and audience, and communicate with your audience in a way that compels them to take the desired
+                        action. As you may have discovered yourself, this is not always as straightforward as it sounds. Sometimes you can hammer out a page of brochure copy first time within a couple of hours. At other times you can spend days agonising
+                        over a single strapline. Creativity doesn’t come on tap. It doesn’t just drop off the end of a production line. Natural talent is a bonus but there’s no substitute for the knowledge and judgement that comes with years of experience,
+                        huge success and the odd catastrophe. Whether a brochure or a website, an advertisement or sales letter. Whether it’s for customers, suppliers or any other stakeholder. Good copy should be straightforward without being simple,
+                        clever without being smug, lively without being breathless.
+                    </div>
                 </div>
-                <div class="about-text__title text-xl lg:text-2xl">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis at laboriosam quibusdam porro minus cum blanditiis aliquid quasi dicta veniam perspiciatis itaque, architecto, numquam expedita impedit possimus eius quis! Nemo <br>                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et natus dolorum laudantium aliquam quibusdam illum molestias minus labore nesciunt? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, minima itaque
-                    dolore, quos, odio velit omnis aliquid harum earum inventore doloremque recusandae labore ut ad.
+                <div class="faq-item">
+                    <div class="faq-item__question">
+                        Вопрос 1:
+                    </div>
+                    <div class="faq-item__answer">
+                        Ответ 1.
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <div class="faq-item__question">
+                        Вопрос 1:
+                    </div>
+                    <div class="faq-item__answer">
+                        Ответ 1.
+                    </div>
                 </div>
             </div>
         </div>
