--- a/clients.html
+++ b/clients.html
@@ -29,26 +29,44 @@
                 <div class="header-burger__line"></div>
             </div>
         </header>
-        <div class="main-title">
-            <div class="main-title__logo">Tony Kent</div>
-            <div class="main-title__slogan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe nisi tempora ad corporis excepturi eaque enim quia porro harum?</div>
-            <div class="main-title__about"><a href="#about">about me</a></div>
-            <div class="main-title__down"><a href=""><i class="fas fa-sort-alpha-down"></i></a></div>
-        </div>
-        <div class="container flex justify-between flex-wrap" id="about">
-            <div class="about-img w-full lg:w-1/2">
-                <img src='images/63e69afe7a52ba2f70b96f82c3f3a06c.jpg' class="w-full object-cover">
+        <!-- <div class="w-full flex flex-wrap clients-container">
+            <div class="clients-part w-1/3">
+                <div class="clients-container__block">ff</div>
             </div>
-            <div class="about-text w-full lg:w-1/2">
-                <div class="about-text__h1 text-3xl lg:text-4xl">
-                    Tony Kent
+            <div class="clients-part w-1/3">
+                <div class="clients-container__block">ff</div>
+            </div>
+        </div> -->
+        <div class="container">
+            <div class="clients-title">
+                Clients and testimonials
+            </div>
+            <div class="clients-container">
+                <div class="clients-block">
+                    <div class="clients-block__title">
+                        Business
+                    </div>
+                    <div class="clients-block__text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
+                    </div>
+                    <div class="clients-block__btn">
+                        read more
+                    </div>
                 </div>
-                <div class="about-text__title text-xl lg:text-2xl">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis at laboriosam quibusdam porro minus cum blanditiis aliquid quasi dicta veniam perspiciatis itaque, architecto, numquam expedita impedit possimus eius quis! Nemo <br>                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et natus dolorum laudantium aliquam quibusdam illum molestias minus labore nesciunt? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, minima itaque
-                    dolore, quos, odio velit omnis aliquid harum earum inventore doloremque recusandae labore ut ad.
+                <div class="clients-block">
+                    <div class="clients-block__title">
+                        Business
+                    </div>
+                    <div class="clients-block__text">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
+                    </div>
+                    <div class="clients-block__btn">
+                        read more
+                    </div>
                 </div>
             </div>
         </div>
+
         <footer>
             <div class="footer-phone py-4 w-full md:w-1/4">
                 <a href="tel:+79999999999">+79999999999</a>
