--- a/faq.html
+++ b/faq.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?25b6f5fef17cec41d5cf" rel="stylesheet"></head>
+    <link href="main.css?25b6f5fef17cec41d5cf" rel="stylesheet">
+</head>
 
 <body>
     <div class="burger-full">
         <div class="burger-menu text-xl lg:text-3xl">
-            <div class="burger-menu__item"><a href="/index.html">Homepage</a></div>
+            <div class="burger-menu__item"><a href="./index.html">Homepage</a></div>
             <div class="burger-menu__item"><a href="#">About</a></div>
-            <div class="burger-menu__item"><a href="/clients.html">Clients and testimonials</a></div>
+            <div class="burger-menu__item"><a href="./clients.html">Clients and testimonials</a></div>
             <div class="burger-menu__item"><a href="#">List of services </a></div>
-            <div class="burger-menu__item"><a href="/progress.html">Copywriting process</a></div>
-            <div class="burger-menu__item"><a href="/faq.html">FAQ</a></div>
+            <div class="burger-menu__item"><a href="./progress.html">Copywriting process</a></div>
+            <div class="burger-menu__item"><a href="./faq.html">FAQ</a></div>
             <div class="burger-menu__item"><a href="#">Contacts</a></div>
         </div>
     </div>
@@ -80,6 +81,7 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?25b6f5fef17cec41d5cf"></script></body>
+    <script type="text/javascript" src="main.js?25b6f5fef17cec41d5cf"></script>
+</body>
 
 </html>
