--- a/faq.html
+++ b/faq.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="main.css?25b6f5fef17cec41d5cf" rel="stylesheet">
-</head>
+<link href="main.css?c272da75af859f0a8564" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
         <div class="burger-menu text-xl lg:text-3xl">
             <div class="burger-menu__item"><a href="./index.html">Homepage</a></div>
-            <div class="burger-menu__item"><a href="#">About</a></div>
+            <!-- <div class="burger-menu__item"><a href="#">About</a></div> -->
             <div class="burger-menu__item"><a href="./clients.html">Clients and testimonials</a></div>
             <div class="burger-menu__item"><a href="#">List of services </a></div>
             <div class="burger-menu__item"><a href="./progress.html">Copywriting process</a></div>
             <div class="burger-menu__item"><a href="./faq.html">FAQ</a></div>
-            <div class="burger-menu__item"><a href="#">Contacts</a></div>
+            <div class="burger-menu__item"><a href="./contacts.html">Contacts</a></div>
         </div>
     </div>
     <div class="main-wrapper">
@@ -26,19 +25,19 @@
             <div class="header-logo">
                 TK
             </div>
+            <div class="header-title text-2xl md:text-4xl lg:text-6xl">
+                FAQ
+            </div>
             <div class="header-burger">
                 <div class="header-burger__line"></div>
             </div>
         </header>
-        <div class="container">
-            <div class="clients-title">
-                FAQ
-            </div>
+        <div class="container  center-block">
             <div class="faq">
                 <div class="faq-item">
                     <div class="faq-item__question">
                         <div class="faq-question__title">What does a copywriter do?</div>
-                        <div class="faq-question__icon">+</div>
+                        <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
                     </div>
                     <div class="faq-item__answer">
                         From engaging with your customers to enhancing your brand, a good copywriter will be able to understand your business and its objectives, distil your market and audience, and communicate with your audience in a way that compels them to take the desired
@@ -50,18 +49,28 @@
                 </div>
                 <div class="faq-item">
                     <div class="faq-item__question">
-                        Вопрос 1:
+                        <div class="faq-question__title">What does a copywriter do?</div>
+                        <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
                     </div>
                     <div class="faq-item__answer">
-                        Ответ 1.
+                        From engaging with your customers to enhancing your brand, a good copywriter will be able to understand your business and its objectives, distil your market and audience, and communicate with your audience in a way that compels them to take the desired
+                        action. As you may have discovered yourself, this is not always as straightforward as it sounds. Sometimes you can hammer out a page of brochure copy first time within a couple of hours. At other times you can spend days agonising
+                        over a single strapline. Creativity doesn’t come on tap. It doesn’t just drop off the end of a production line. Natural talent is a bonus but there’s no substitute for the knowledge and judgement that comes with years of experience,
+                        huge success and the odd catastrophe. Whether a brochure or a website, an advertisement or sales letter. Whether it’s for customers, suppliers or any other stakeholder. Good copy should be straightforward without being simple,
+                        clever without being smug, lively without being breathless.
                     </div>
                 </div>
                 <div class="faq-item">
                     <div class="faq-item__question">
-                        Вопрос 1:
+                        <div class="faq-question__title">What does a copywriter do?</div>
+                        <div class="faq-question__icon"><i class="fas fa-plus"></i></div>
                     </div>
                     <div class="faq-item__answer">
-                        Ответ 1.
+                        From engaging with your customers to enhancing your brand, a good copywriter will be able to understand your business and its objectives, distil your market and audience, and communicate with your audience in a way that compels them to take the desired
+                        action. As you may have discovered yourself, this is not always as straightforward as it sounds. Sometimes you can hammer out a page of brochure copy first time within a couple of hours. At other times you can spend days agonising
+                        over a single strapline. Creativity doesn’t come on tap. It doesn’t just drop off the end of a production line. Natural talent is a bonus but there’s no substitute for the knowledge and judgement that comes with years of experience,
+                        huge success and the odd catastrophe. Whether a brochure or a website, an advertisement or sales letter. Whether it’s for customers, suppliers or any other stakeholder. Good copy should be straightforward without being simple,
+                        clever without being smug, lively without being breathless.
                     </div>
                 </div>
             </div>
@@ -81,7 +90,6 @@
             </div>
         </footer>
     </div>
-    <script type="text/javascript" src="main.js?25b6f5fef17cec41d5cf"></script>
-</body>
+<script type="text/javascript" src="main.js?c272da75af859f0a8564"></script></body>
 
 </html>
