--- a/progress.html
+++ b/progress.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="main.css?25b6f5fef17cec41d5cf" rel="stylesheet">
-</head>
+<link href="main.css?c272da75af859f0a8564" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
         <div class="burger-menu text-xl lg:text-3xl">
             <div class="burger-menu__item"><a href="./index.html">Homepage</a></div>
-            <div class="burger-menu__item"><a href="#">About</a></div>
+            <!-- <div class="burger-menu__item"><a href="#">About</a></div> -->
             <div class="burger-menu__item"><a href="./clients.html">Clients and testimonials</a></div>
             <div class="burger-menu__item"><a href="#">List of services </a></div>
             <div class="burger-menu__item"><a href="./progress.html">Copywriting process</a></div>
             <div class="burger-menu__item"><a href="./faq.html">FAQ</a></div>
-            <div class="burger-menu__item"><a href="#">Contacts</a></div>
+            <div class="burger-menu__item"><a href="./contacts.html">Contacts</a></div>
         </div>
     </div>
     <div class="main-wrapper">
@@ -26,19 +25,20 @@
             <div class="header-logo">
                 TK
             </div>
+            <div class="header-title text-2xl md:text-4xl lg:text-6xl">
+                Copywriting process
+            </div>
             <div class="header-burger">
                 <div class="header-burger__line"></div>
             </div>
         </header>
-        <div class="w-full progress-container flex justify-between flex-wrap">
-            <div class="head-img w-full">
-                <img src='images/c23d8b5aec2d3433ed07dfb3b4570172.png' class="w-full object-cover">
-            </div>
+        <div class="w-full progress-container flex justify-between flex-wrap center-block">
+
             <div class="w-full z-20 bg-black">
                 <div class="container">
                     <div class="process-container">
-                        <h3 class="text-6xl font-black">Copywriting process</h3>
-                        <div class="process-container__title">Why you need a copywriter.</div>
+                        <h3 class="text-4xl lg:text-6xl font-black">Copywriting process</h3>
+                        <div class="process-container__title text-3xl lg:text-4xl">Why you need a copywriter.</div>
                         <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora impedit ea quaerat accusamus exercitationem esse non, in, voluptatem sint explicabo voluptas asperiores praesentium provident quae culpa vitae cupiditate et. Ut saepe
                             iusto labore placeat autem cupiditate harum minus! Repellat cum, expedita aspernatur sequi maiores possimus sapiente minima totam atque nobis itaque, unde illum esse enim eius, perferendis ex molestias quibusdam aliquid sunt
                             non! Molestiae ad quis, deleniti et ipsam aspernatur praesentium velit error provident dignissimos dolores laudantium ducimus magni, maiores ut fugiat quam vero reprehenderit nam, ipsa voluptates. Sit expedita repellat consequuntur.
@@ -46,20 +46,23 @@
                     </div>
                 </div>
             </div>
-            <div class="whole-block">
-                <!-- <div class="container text-black">
+            <!--   <div class="whole-block">
+                 <div class="container text-black">
                     <div class="text-6xl font-black">Why you need a copywriter.</div>
                     <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora impedit ea quaerat accusamus exercitationem esse non, in, voluptatem sint explicabo voluptas asperiores praesentium provident quae culpa vitae cupiditate et. Ut saepe
                         iusto labore placeat autem cupiditate harum minus! Repellat cum, expedita aspernatur sequi maiores possimus sapiente minima totam atque nobis itaque, unde illum esse enim eius, perferendis ex molestias quibusdam aliquid sunt non!
                         Molestiae ad quis, deleniti et ipsam aspernatur praesentium velit error provident dignissimos dolores laudantium ducimus magni, maiores ut fugiat quam vero reprehenderit nam, ipsa voluptates. Sit expedita repellat consequuntur.
                         Asperiores, tempore reiciendis! Sit cupiditate soluta cum at?</p>
-                </div> -->
+                </div> 
+            </div>-->
+            <div class="head-img w-full">
+                <img src='images/c23d8b5aec2d3433ed07dfb3b4570172.png' class="w-full object-cover">
             </div>
             <div class="w-full z-20 bg-black">
                 <div class="container">
                     <div class="process-container">
-                        <h3 class="text-6xl font-black">Copywriting process</h3>
-                        <div class="process-container__title">Why you need a copywriter.</div>
+                        <h3 class="text-4xl lg:text-6xl font-black">Copywriting process</h3>
+                        <div class="process-container__title text-3xl lg:text-4xl">Why you need a copywriter.</div>
                         <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora impedit ea quaerat accusamus exercitationem esse non, in, voluptatem sint explicabo voluptas asperiores praesentium provident quae culpa vitae cupiditate et. Ut saepe
                             iusto labore placeat autem cupiditate harum minus! Repellat cum, expedita aspernatur sequi maiores possimus sapiente minima totam atque nobis itaque, unde illum esse enim eius, perferendis ex molestias quibusdam aliquid sunt
                             non! Molestiae ad quis, deleniti et ipsam aspernatur praesentium velit error provident dignissimos dolores laudantium ducimus magni, maiores ut fugiat quam vero reprehenderit nam, ipsa voluptates. Sit expedita repellat consequuntur.
@@ -83,7 +86,6 @@
             </div>
         </footer>
     </div>
-    <script type="text/javascript" src="main.js?25b6f5fef17cec41d5cf"></script>
-</body>
+<script type="text/javascript" src="main.js?c272da75af859f0a8564"></script></body>
 
 </html>
