--- a/clients.html
+++ b/clients.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="main.css?25b6f5fef17cec41d5cf" rel="stylesheet">
-</head>
+<link href="main.css?c272da75af859f0a8564" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
         <div class="burger-menu text-xl lg:text-3xl">
             <div class="burger-menu__item"><a href="./index.html">Homepage</a></div>
-            <div class="burger-menu__item"><a href="#">About</a></div>
+            <!-- <div class="burger-menu__item"><a href="#">About</a></div> -->
             <div class="burger-menu__item"><a href="./clients.html">Clients and testimonials</a></div>
             <div class="burger-menu__item"><a href="#">List of services </a></div>
             <div class="burger-menu__item"><a href="./progress.html">Copywriting process</a></div>
@@ -25,6 +24,9 @@
         <header>
             <div class="header-logo">
                 TK
+            </div>
+            <div class="header-title text-2xl md:text-4xl lg:text-6xl">
+                Clients and testimonials
             </div>
             <div class="header-burger">
                 <div class="header-burger__line"></div>
@@ -38,10 +40,7 @@
                 <div class="clients-container__block">ff</div>
             </div>
         </div> -->
-        <div class="container">
-            <div class="clients-title">
-                Clients and testimonials
-            </div>
+        <div class="container  center-block">
             <div class="clients-container">
                 <div class="clients-block">
                     <div class="clients-block__title">
@@ -83,7 +82,6 @@
             </div>
         </footer>
     </div>
-    <script type="text/javascript" src="main.js?25b6f5fef17cec41d5cf"></script>
-</body>
+<script type="text/javascript" src="main.js?c272da75af859f0a8564"></script></body>
 
 </html>
