--- a/index.html
+++ b/index.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="main.css?25b6f5fef17cec41d5cf" rel="stylesheet">
-</head>
+<link href="main.css?c272da75af859f0a8564" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
         <div class="burger-menu text-xl lg:text-3xl">
             <div class="burger-menu__item"><a href="./index.html">Homepage</a></div>
-            <div class="burger-menu__item"><a href="#">About</a></div>
+            <!-- <div class="burger-menu__item"><a href="#">About</a></div> -->
             <div class="burger-menu__item"><a href="./clients.html">Clients and testimonials</a></div>
             <div class="burger-menu__item"><a href="#">List of services </a></div>
             <div class="burger-menu__item"><a href="./progress.html">Copywriting process</a></div>
             <div class="burger-menu__item"><a href="./faq.html">FAQ</a></div>
-            <div class="burger-menu__item"><a href="#">Contacts</a></div>
+            <div class="burger-menu__item"><a href="./contacts.html">Contacts</a></div>
         </div>
     </div>
     <div class="main-wrapper">
@@ -26,11 +25,14 @@
             <div class="header-logo">
                 TK
             </div>
+            <div class="header-title text-2xl md:text-4xl lg:text-6xl">
+                Homepage
+            </div>
             <div class="header-burger">
                 <div class="header-burger__line"></div>
             </div>
         </header>
-        <div class="main-title">
+        <div class="main-title center-block">
             <div class="main-title__logo">Tony Kent</div>
             <div class="main-title__slogan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe nisi tempora ad corporis excepturi eaque enim quia porro harum?</div>
             <div class="main-title__about"><a href="#about">about me</a></div>
@@ -65,7 +67,6 @@
             </div>
         </footer>
     </div>
-    <script type="text/javascript" src="main.js?25b6f5fef17cec41d5cf"></script>
-</body>
+<script type="text/javascript" src="main.js?c272da75af859f0a8564"></script></body>
 
 </html>
