--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?c272da75af859f0a8564" rel="stylesheet"></head>
+<link href="main.css?bdda7c11cf48626dd504" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
@@ -14,7 +14,7 @@
             <div class="burger-menu__item"><a href="./index.html">Homepage</a></div>
             <!-- <div class="burger-menu__item"><a href="#">About</a></div> -->
             <div class="burger-menu__item"><a href="./clients.html">Clients and testimonials</a></div>
-            <div class="burger-menu__item"><a href="#">List of services </a></div>
+            <div class="burger-menu__item"><a href="./services.html">List of services</a></div>
             <div class="burger-menu__item"><a href="./progress.html">Copywriting process</a></div>
             <div class="burger-menu__item"><a href="./faq.html">FAQ</a></div>
             <div class="burger-menu__item"><a href="./contacts.html">Contacts</a></div>
@@ -90,6 +90,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?c272da75af859f0a8564"></script></body>
+<script type="text/javascript" src="main.js?bdda7c11cf48626dd504"></script></body>
 
 </html>
