--- a/services.html
+++ b/services.html
@@ -26,7 +26,7 @@
                 TK
             </div>
             <div class="header-title text-2xl md:text-4xl lg:text-6xl">
-                Clients and testimonials
+                List of services
             </div>
             <div class="header-burger">
                 <div class="header-burger__line"></div>
@@ -44,44 +44,24 @@
             <div class="clients-container">
                 <div class="clients-block">
                     <div class="clients-block__title">
-                        Business
+                        Ads text
                     </div>
                     <div class="clients-block__text">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
                     </div>
-                    <div class="clients-block__img w-full">
-                        <img src='images/0814f70a9273426c66c5e9b01ab0f177.jpg' class="w-full object-cover">
-                    </div>
                     <div class="clients-block__btn">
-                        read more
+                        from 50$
                     </div>
                 </div>
                 <div class="clients-block">
                     <div class="clients-block__title">
-                        Magazines
+                        Business article
                     </div>
                     <div class="clients-block__text">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
                     </div>
-                    <div class="clients-block__img w-full">
-                        <img src='images/ce323c20b9c10a9e47b500cd1a528520.jpg' class="w-full object-cover">
-                    </div>
                     <div class="clients-block__btn">
-                        read more
-                    </div>
-                </div>
-                <div class="clients-block">
-                    <div class="clients-block__title">
-                        Bloggers
-                    </div>
-                    <div class="clients-block__text">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
-                    </div>
-                    <div class="clients-block__img w-full">
-                        <img src='images/37afab8782f5592522d9aede6beefb3c.jpg' class="w-full object-cover">
-                    </div>
-                    <div class="clients-block__btn">
-                        read more
+                        from 20$
                     </div>
                 </div>
             </div>
