--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?c272da75af859f0a8564" rel="stylesheet"></head>
+<link href="main.css?bdda7c11cf48626dd504" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
@@ -14,7 +14,7 @@
             <div class="burger-menu__item"><a href="./index.html">Homepage</a></div>
             <!-- <div class="burger-menu__item"><a href="#">About</a></div> -->
             <div class="burger-menu__item"><a href="./clients.html">Clients and testimonials</a></div>
-            <div class="burger-menu__item"><a href="#">List of services </a></div>
+            <div class="burger-menu__item"><a href="./services.html">List of services </a></div>
             <div class="burger-menu__item"><a href="./progress.html">Copywriting process</a></div>
             <div class="burger-menu__item"><a href="./faq.html">FAQ</a></div>
             <div class="burger-menu__item"><a href="./contacts.html">Contacts</a></div>
@@ -33,18 +33,18 @@
             </div>
         </header>
         <div class="main-title center-block">
-            <div class="main-title__logo">Tony Kent</div>
+            <div class="main-title__logo">Anthony Kent</div>
             <div class="main-title__slogan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe nisi tempora ad corporis excepturi eaque enim quia porro harum?</div>
             <div class="main-title__about"><a href="#about">about me</a></div>
             <div class="main-title__down"><a href=""><i class="fas fa-sort-alpha-down"></i></a></div>
         </div>
         <div class="container flex justify-between flex-wrap" id="about">
             <div class="about-img w-full lg:w-1/2">
-                <img src='images/63e69afe7a52ba2f70b96f82c3f3a06c.jpg' class="w-full object-cover">
+                <img src='images/24fddc5e56e3399918475e3580af1640.jpg' class="w-full object-cover">
             </div>
             <div class="about-text w-full lg:w-1/2">
                 <div class="about-text__h1 text-3xl lg:text-4xl">
-                    Tony Kent
+                    Anthony Kent
                 </div>
                 <div class="about-text__title text-xl lg:text-2xl">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis at laboriosam quibusdam porro minus cum blanditiis aliquid quasi dicta veniam perspiciatis itaque, architecto, numquam expedita impedit possimus eius quis! Nemo <br>                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et natus dolorum laudantium aliquam quibusdam illum molestias minus labore nesciunt? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, minima itaque
@@ -67,6 +67,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?c272da75af859f0a8564"></script></body>
+<script type="text/javascript" src="main.js?bdda7c11cf48626dd504"></script></body>
 
 </html>
