--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?bdda7c11cf48626dd504" rel="stylesheet"></head>
+<link href="main.css?83742eb7629dc7f308c0" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
@@ -36,7 +36,6 @@
             <div class="main-title__logo">Anthony Kent</div>
             <div class="main-title__slogan">Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, saepe nisi tempora ad corporis excepturi eaque enim quia porro harum?</div>
             <div class="main-title__about"><a href="#about">about me</a></div>
-            <div class="main-title__down"><a href=""><i class="fas fa-sort-alpha-down"></i></a></div>
         </div>
         <div class="container flex justify-between flex-wrap" id="about">
             <div class="about-img w-full lg:w-1/2">
@@ -46,7 +45,7 @@
                 <div class="about-text__h1 text-3xl lg:text-4xl">
                     Anthony Kent
                 </div>
-                <div class="about-text__title text-xl lg:text-2xl">
+                <div class="about-text__title text-base lg:text-xl">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis at laboriosam quibusdam porro minus cum blanditiis aliquid quasi dicta veniam perspiciatis itaque, architecto, numquam expedita impedit possimus eius quis! Nemo <br>                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus et natus dolorum laudantium aliquam quibusdam illum molestias minus labore nesciunt? <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, minima itaque
                     dolore, quos, odio velit omnis aliquid harum earum inventore doloremque recusandae labore ut ad.
                 </div>
@@ -67,6 +66,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?bdda7c11cf48626dd504"></script></body>
+<script type="text/javascript" src="main.js?83742eb7629dc7f308c0"></script></body>
 
 </html>
