--- a/progress.html
+++ b/progress.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?bdda7c11cf48626dd504" rel="stylesheet"></head>
+<link href="main.css?83742eb7629dc7f308c0" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
@@ -37,9 +37,8 @@
             <div class="w-full z-20 bg-black">
                 <div class="container">
                     <div class="process-container">
-                        <h3 class="text-4xl lg:text-6xl font-black">Copywriting process</h3>
-                        <div class="process-container__title text-3xl lg:text-4xl">Why you need a copywriter.</div>
-                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora impedit ea quaerat accusamus exercitationem esse non, in, voluptatem sint explicabo voluptas asperiores praesentium provident quae culpa vitae cupiditate et. Ut saepe
+                        <div class="process-container__title text-4xl lg:text-5xl">Why you need a copywriter.</div>
+                        <p class="text-2xl lg:text-3xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora impedit ea quaerat accusamus exercitationem esse non, in, voluptatem sint explicabo voluptas asperiores praesentium provident quae culpa vitae cupiditate et. Ut saepe
                             iusto labore placeat autem cupiditate harum minus! Repellat cum, expedita aspernatur sequi maiores possimus sapiente minima totam atque nobis itaque, unde illum esse enim eius, perferendis ex molestias quibusdam aliquid sunt
                             non! Molestiae ad quis, deleniti et ipsam aspernatur praesentium velit error provident dignissimos dolores laudantium ducimus magni, maiores ut fugiat quam vero reprehenderit nam, ipsa voluptates. Sit expedita repellat consequuntur.
                             Asperiores, tempore reiciendis! Sit cupiditate soluta cum at?</p>
@@ -61,9 +60,8 @@
             <div class="w-full z-20 bg-black">
                 <div class="container">
                     <div class="process-container">
-                        <h3 class="text-4xl lg:text-6xl font-black">Copywriting process</h3>
-                        <div class="process-container__title text-3xl lg:text-4xl">Why you need a copywriter.</div>
-                        <p class="">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora impedit ea quaerat accusamus exercitationem esse non, in, voluptatem sint explicabo voluptas asperiores praesentium provident quae culpa vitae cupiditate et. Ut saepe
+                        <div class="process-container__title text-4xl lg:text-5xl">Why you need a copywriter.</div>
+                        <p class="text-2xl lg:text-3xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora impedit ea quaerat accusamus exercitationem esse non, in, voluptatem sint explicabo voluptas asperiores praesentium provident quae culpa vitae cupiditate et. Ut saepe
                             iusto labore placeat autem cupiditate harum minus! Repellat cum, expedita aspernatur sequi maiores possimus sapiente minima totam atque nobis itaque, unde illum esse enim eius, perferendis ex molestias quibusdam aliquid sunt
                             non! Molestiae ad quis, deleniti et ipsam aspernatur praesentium velit error provident dignissimos dolores laudantium ducimus magni, maiores ut fugiat quam vero reprehenderit nam, ipsa voluptates. Sit expedita repellat consequuntur.
                             Asperiores, tempore reiciendis! Sit cupiditate soluta cum at?</p>
@@ -86,6 +84,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?bdda7c11cf48626dd504"></script></body>
+<script type="text/javascript" src="main.js?83742eb7629dc7f308c0"></script></body>
 
 </html>
