--- a/services.html
+++ b/services.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-<link href="main.css?83742eb7629dc7f308c0" rel="stylesheet"></head>
+<link href="main.css?cfa652548dcd8fa1719b" rel="stylesheet"></head>
 
 <body>
     <div class="burger-full">
@@ -43,10 +43,10 @@
         <div class="container  center-block">
             <div class="clients-container">
                 <div class="clients-block">
-                    <div class="clients-block__title">
+                    <div class="clients-block__title text-3xl lg:text-5xl">
                         Ads text
                     </div>
-                    <div class="clients-block__text">
+                    <div class="clients-block__text text-xl lg:text-2xl">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
                     </div>
                     <div class="clients-block__btn">
@@ -54,10 +54,10 @@
                     </div>
                 </div>
                 <div class="clients-block">
-                    <div class="clients-block__title">
+                    <div class="clients-block__title text-3xl lg:text-5xl">
                         Business article
                     </div>
-                    <div class="clients-block__text">
+                    <div class="clients-block__text text-xl lg:text-2xl">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius culpa nam reiciendis sed illum ducimus itaque aperiam nulla quisquam placeat odio pariatur excepturi consequuntur, maiores dolores architecto accusamus repudiandae accusantium?
                     </div>
                     <div class="clients-block__btn">
@@ -82,6 +82,6 @@
             </div>
         </footer>
     </div>
-<script type="text/javascript" src="main.js?83742eb7629dc7f308c0"></script></body>
+<script type="text/javascript" src="main.js?cfa652548dcd8fa1719b"></script></body>
 
 </html>
